--- a/deep-tech-in-energy.html
+++ b/deep-tech-in-energy.html
@@ -9,7 +9,7 @@
 
 
 
-<link rel="canonical" href="https://ikding.github.io/shelves-of-cans-of-worms.html">
+<link rel="canonical" href="https://ikding.github.io/deep-tech-in-energy.html">
 
         <meta name="author" content="I-Kang Ding" />
         <meta name="keywords" content="climate_tech" />
@@ -18,7 +18,7 @@
         <meta property="og:site_name" content="I-Kang Ding's site" />
         <meta property="og:type" content="article"/>
         <meta property="og:title" content="&#34;Shelves of cans of worms&#34; - why deep-tech in energy is tough"/>
-        <meta property="og:url" content="https://ikding.github.io/shelves-of-cans-of-worms.html"/>
+        <meta property="og:url" content="https://ikding.github.io/deep-tech-in-energy.html"/>
         <meta property="og:description" content="Reminiscing about first decade of my career in materials science and deep-tech energy companies, and what I learned about the sector. (Also: what software companies and fruit flies have in common, and why working on deep tech energy technologies can feel like opening cans of worms all day.)"/>
         <meta property="article:published_time" content="2020-02-08" />
             <meta property="article:section" content="climate_tech" />
@@ -79,7 +79,7 @@ I-Kang Ding's site            </a>
         <article>
             <header class="page-header">
                 <h1>
-                    <a href="https://ikding.github.io/shelves-of-cans-of-worms.html"
+                    <a href="https://ikding.github.io/deep-tech-in-energy.html"
                        rel="bookmark"
                        title="Permalink to "Shelves of cans of worms" - why deep-tech in energy is tough">
                         &quot;Shelves of cans of worms&quot; - why deep-tech in energy is tough
@@ -107,7 +107,8 @@ I-Kang Ding's site            </a>
     
 </footer><!-- /.post-info -->                    </div>
                 </div>
-                <p>Climate change is one of the most important problems of of 21st century. After many investors having been burned in the clean tech 1.0 wave in the late 00's, there has recently been a resurgence of interest from investors in things related to &quot;climate tech&quot;.</p>
+                <img alt="swansons-law" class="align-center" src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4c/Swansons-law.svg/2560px-Swansons-law.svg.png" />
+<p>Climate change is one of the most important problems of of 21st century. After many investors having been burned in the clean tech 1.0 wave in the late 00's, there has recently been a resurgence of interest from investors in things related to &quot;climate tech&quot;.</p>
 <p>As a person who spent first decade of my career in materials science and deep-tech energy companies (Stanford '06-'11, Alta Devices '11-'12, Lumileds '12-'15), I’d like share with people who are new to this field some learnings and my personal beliefs, shaped not just from my personal experience, but from talking to many folks in the same field.</p>
 <div class="section" id="software-vs-deep-tech-energy-companies-a-tale-of-two-industries">
 <h2>Software vs. Deep-tech energy companies: a tale of two industries</h2>
@@ -203,8 +204,8 @@ I-Kang Ding's site            </a>
             var disqus_config = function () {
                 this.language = "en";
 
-                        this.page.identifier = '2020-02-08-shelves-of-cans-of-worms';
-                        this.page.url = 'https://ikding.github.io/shelves-of-cans-of-worms.html';
+                        this.page.identifier = '2020-02-08-deep-tech-in-energy';
+                        this.page.url = 'https://ikding.github.io/deep-tech-in-energy.html';
             };
 
             /* * * DON'T EDIT BELOW THIS LINE * * */
