--- a/authors.html
+++ b/authors.html
@@ -70,7 +70,7 @@ I-Kang Ding's site            </a>
     <div class="row">
         <div class="col-sm-9">
   <h1>Authors on I-Kang Ding's site</h1>
-        <li><a href="https://ikding.github.io/author/i-kang-ding.html">I-Kang Ding</a> (28)</li>
+        <li><a href="https://ikding.github.io/author/i-kang-ding.html">I-Kang Ding</a> (29)</li>
         </div>
         <div class="col-sm-3" id="sidebar">
             <aside>
@@ -85,7 +85,7 @@ Data Science Manager at Capital One, focused on anti-fraud ML models.
 Stanford Engineering Ph.D.
 <br/>
 <br/>
-Interested in data science, renewable energy, and climate change.
+Interested in machine learning, Python, and climate change.
 
     </p>
 </div><!-- Sidebar -->
