--- a/tackling-climate-change-with-ml-neurips.html
+++ b/tackling-climate-change-with-ml-neurips.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" prefix="og: http://ogp.me/ns# fb: https://www.facebook.com/2008/fbml">
 <head>
-    <title>Tackling climate change with ML - I-Kang's Notes</title>
+    <title>Tackling climate change with ML (NeurIPS Workshop) - I-Kang's Notes</title>
     <!-- Using the latest rendering mode for IE -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta charset="utf-8">
@@ -9,7 +9,7 @@
 
 
 
-<link rel="canonical" href="https://ikding.github.io/tackling-climate-change-with-ml.html">
+<link rel="canonical" href="https://ikding.github.io/tackling-climate-change-with-ml-neurips.html">
 
         <meta name="author" content="I-Kang Ding" />
         <meta name="keywords" content="climate_tech,data_science" />
@@ -17,8 +17,8 @@
 
         <meta property="og:site_name" content="I-Kang's Notes" />
         <meta property="og:type" content="article"/>
-        <meta property="og:title" content="Tackling climate change with ML"/>
-        <meta property="og:url" content="https://ikding.github.io/tackling-climate-change-with-ml.html"/>
+        <meta property="og:title" content="Tackling climate change with ML (NeurIPS Workshop)"/>
+        <meta property="og:url" content="https://ikding.github.io/tackling-climate-change-with-ml-neurips.html"/>
         <meta property="og:description" content="I attended the NeurIPS 2019 Workshop - Tackling Climate Change with Machine Learning remotely on 2019-12-14. Below are the notes I took from the talks that I attended (which is just a small subset). Note: Many of the discussions on this workshop is a follow-up to the paper of the same …"/>
         <meta property="article:published_time" content="2019-12-14" />
             <meta property="article:section" content="climate_tech" />
@@ -80,10 +80,10 @@ I-Kang's Notes            </a>
         <article>
             <header class="page-header">
                 <h1>
-                    <a href="https://ikding.github.io/tackling-climate-change-with-ml.html"
+                    <a href="https://ikding.github.io/tackling-climate-change-with-ml-neurips.html"
                        rel="bookmark"
-                       title="Permalink to Tackling climate change with ML">
-                        Tackling climate change with ML
+                       title="Permalink to Tackling climate change with ML (NeurIPS Workshop)">
+                        Tackling climate change with ML (NeurIPS Workshop)
                     </a>
                 </h1>
             </header>
@@ -260,8 +260,8 @@ I-Kang's Notes            </a>
             var disqus_config = function () {
                 this.language = "en";
 
-                        this.page.identifier = '2019-12-14-tackling-climate-change-with-ml';
-                        this.page.url = 'https://ikding.github.io/tackling-climate-change-with-ml.html';
+                        this.page.identifier = '2019-12-14-tackling-climate-change-with-ml-neurips';
+                        this.page.url = 'https://ikding.github.io/tackling-climate-change-with-ml-neurips.html';
             };
 
             /* * * DON'T EDIT BELOW THIS LINE * * */
