--- a/shotgun-vs-sniper.html
+++ b/shotgun-vs-sniper.html
@@ -13,13 +13,13 @@
 
         <meta name="author" content="I-Kang Ding" />
         <meta name="keywords" content="career,climate_tech,data_science" />
-        <meta name="description" content="When I first started out with my job search years ago, I had started with the shotgun approach - scouring job boards for openings, applying for tens to hundreds of job postings online, and most of my applications receive no response whatsoever. Since then, I&#39;ve been adopting a sniper-rifle approach in my job search. Here&#39;s what that may look like, and why it may be extra important in the lean years." />
+        <meta name="description" content="Over the past few years, I have had the chance to mentor aspiring data scientists in their job search. In that process, I have also had opportunities to reflect on my own job search process. I realized that I&#39;ve been conducting my own job search with a &#34;sniper rifle&#34; approach. Here&#39;s what that may look like, and why it may be extra important in the lean years." />
 
         <meta property="og:site_name" content="I-Kang's Notes" />
         <meta property="og:type" content="article"/>
         <meta property="og:title" content="Shotgun vs sniper rifle approaches in job search"/>
         <meta property="og:url" content="https://ikding.github.io/shotgun-vs-sniper.html"/>
-        <meta property="og:description" content="When I first started out with my job search years ago, I had started with the shotgun approach - scouring job boards for openings, applying for tens to hundreds of job postings online, and most of my applications receive no response whatsoever. Since then, I&#39;ve been adopting a sniper-rifle approach in my job search. Here&#39;s what that may look like, and why it may be extra important in the lean years."/>
+        <meta property="og:description" content="Over the past few years, I have had the chance to mentor aspiring data scientists in their job search. In that process, I have also had opportunities to reflect on my own job search process. I realized that I&#39;ve been conducting my own job search with a &#34;sniper rifle&#34; approach. Here&#39;s what that may look like, and why it may be extra important in the lean years."/>
         <meta property="article:published_time" content="2020-07-03" />
             <meta property="article:section" content="career" />
             <meta property="article:tag" content="career" />
